Bug fix 391: Fix for "Illegal reflective access".